created 'elements' stylesheet

--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -1,3 +1,8 @@
+@import 'settings';
+
 body {
-    background-color: $;
+    background-color: $transparent-white;
+}
+h1 {
+    font-family: "Big Shoulders Display";
 }
