--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -6,14 +6,12 @@ $very-light-gray: hsl(0, 0%, 95%); //background, headings, buttons
 
 @font-face {
   font-family: "Lexend Deca";
-  font-weight: 400;
   src: url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap")
     format("woff2");
 }
 
 @font-face {
-  font-family: "Lexend Deca";
-  font-weight: 400;
+  font-family: "Big Shoulders Display";
   src: url("fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap")
     format("woff2");
 }
