added h1 and h2 in elements.css

--- a/styles/elements.css
+++ b/styles/elements.css
@@ -11,5 +11,9 @@ body {
 }
 
 h1 {
-  font-family: "Big Shoulders Display";
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1rem;
 }/*# sourceMappingURL=elements.css.map */
