--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -4,5 +4,8 @@ body {
     background-color: $transparent-white;
 }
 h1 {
-    font-family: "Big Shoulders Display";
+    font-size: 2rem;
+}
+p {
+    font-size: 1rem;
 }
