--- a/styles/elements.css
+++ b/styles/elements.css
@@ -16,4 +16,9 @@ h1 {
 
 p {
   font-size: 1rem;
+}
+
+h1,
+p {
+  font-family: "Lexend Deca", sans-serif;
 }/*# sourceMappingURL=elements.css.map */
