--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -5,13 +5,17 @@ $transparent-white: hsla(0, 0%, 100%, 0.75); //paragraphs
 $very-light-gray: hsl(0, 0%, 95%); //background, headings, buttons
 
 @font-face {
-  font-family: "Lexend Deca";
-  src: url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap")
-    format("woff2");
+  font-family: 'Lexend Deca';
+  src: url('./fonts/lexenddeca-variablefont_wght-webfont.woff')
+    format('woff'),
+    url('./fonts/lexenddeca-variablefont_wght-webfont.woff2')
+    format('woff2');
 }
 
 @font-face {
-  font-family: "Big Shoulders Display";
-  src: url("fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap")
-    format("woff2");
+  font-family: 'Big Shoulders Display';
+  src: url('./fonts/bigshouldersdisplay-variablefont_wght-webfont')
+    format('woff'),
+    url('./fonts/bigshouldersdisplay-variablefont_wght-webfont')
+    format('woff2');
 }
