--- a/styles/components.scss
+++ b/styles/components.scss
@@ -1,10 +1,13 @@
+@use 'settings';
+@use 'generic';
+
 .container {
     display: flex;
     flex-direction: row;
 }
 
 .container__box {
-    height: 200px;
+    height: 100px;
     padding: 20px;
     flex: 30%;
     border: 1px solid black;
