--- a/styles/components.css
+++ b/styles/components.css
@@ -4,30 +4,27 @@
 }
 @font-face {
   font-family: "Big Shoulders Display";
-  src: url("../fonts/bigshouldersdisplay-variablefont_wght-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-variablefont_wght-webfont.woff2") format("woff2");
+  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
 }
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 .container {
+  margin: auto;
+  max-width: 1000px;
+  height: 500px;
+  margin-top: 130px;
   display: flex;
   flex-direction: row;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .container__box {
-  height: 100px;
-  padding: 20px;
+  padding: 50px;
   flex: 30%;
-  border: 1px solid black;
 }
 
 @media (max-width: 700px) {
   .container {
-    flex-direction: column; /* stack the boxes vertically */
+    display: flex;
+    flex-direction: row;
   }
 }/*# sourceMappingURL=components.css.map */
