--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -3,15 +3,19 @@
 
 body {
     background-color: settings.$transparent-white;
+    color: settings.$very-light-gray;
 }
 
 h1 {
     font-family: settings.$heading-font;
-    font-size: 2rem;
+    font-size: 3rem;
 }
  
 p {
+    color: settings.$transparent-white;
     font-family: settings.$subheading-font;
     font-size: 1rem;
+    line-height: 2;
 }
+
 
