--- a/styles/trumps.scss
+++ b/styles/trumps.scss
@@ -3,14 +3,23 @@
 
 .container__box--orange {
     background-color: map-get(settings.$color, bright-orange);
+    .container__button {
+        color: map-get(settings.$color, bright-orange);
+    }
 }
 
 .container__box--cyan {
     background-color: map-get(settings.$color, dark-cyan);
+    .container__button {
+        color: map-get(settings.$color, dark-cyan);
+    }
 }
 
 .container__box--dark-cyan {
     background-color: map-get(settings.$color, very-dark-cyan);
+    .container__button {
+        color: map-get(settings.$color, very-dark-cyan);
+    }
 }
 
 .dark {
