--- a/styles/components.css
+++ b/styles/components.css
@@ -9,7 +9,6 @@
 .container {
   margin: auto;
   max-width: 1000px;
-  height: 500px;
   margin-top: 130px;
   display: flex;
   flex-direction: row;
@@ -22,9 +21,19 @@
   flex: 30%;
 }
 
+.container__button {
+  position: relative;
+  bottom: 10px;
+  margin-top: 60px;
+  font-family: "Lexend Deca";
+  padding: 15px 30px;
+  border-radius: 30px;
+  border: none;
+}
+
 @media (max-width: 700px) {
   .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
 }/*# sourceMappingURL=components.css.map */
