--- a/styles/components.scss
+++ b/styles/components.scss
@@ -1,4 +1,5 @@
 @use 'mixins';
+@use 'settings';
 
 .container {
     @include mixins.desktopSizeContainer;
@@ -12,9 +13,20 @@
     flex: 30%;
 }
 
+.container__button {
+  position: relative;
+  bottom: 10px;
+  margin-top: 60px;
+  font-family: map-get(settings.$font, subheading-font);
+    padding: 15px 30px;
+    border-radius: 30px;
+    border: none;
+}
+
 @media (max-width: 700px) {
     .container {
-      @include mixins.flex(row);
+      @include mixins.flex(column);
     }
   }
+
 
