--- a/styles/elements.css
+++ b/styles/elements.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: "Lexend Deca";
-  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"), url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
+  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"),
+    url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
 }
 @font-face {
   font-family: "Big Shoulders Display";
-  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
+  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"),
+    url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
 }
 html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -29,4 +33,4 @@ p {
   font-family: "Lexend Deca";
   font-size: 1rem;
   line-height: 2;
-}/*# sourceMappingURL=elements.css.map */
+} /*# sourceMappingURL=elements.css.map */
