--- a/styles/components.css
+++ b/styles/components.css
@@ -1,10 +1,12 @@
 @font-face {
   font-family: "Lexend Deca";
-  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"), url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
+  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"),
+    url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
 }
 @font-face {
   font-family: "Big Shoulders Display";
-  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
+  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"),
+    url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
 }
 .container {
   margin: auto;
@@ -36,4 +38,4 @@
     display: flex;
     flex-direction: column;
   }
-}/*# sourceMappingURL=components.css.map */
+} /*# sourceMappingURL=components.css.map */
