--- a/styles/elements.scss
+++ b/styles/elements.scss
@@ -1,21 +1,19 @@
-@use 'settings';
-@use 'generic';
+@use "settings";
+@use "generic";
 
 body {
-    background-color: map-get(settings.$color, transparent-white);
-    color: map-get(settings.$color, very-light-gray);
+  background-color: map-get(settings.$color, transparent-white);
+  color: map-get(settings.$color, very-light-gray);
 }
 
 h1 {
-    font-family: map-get(settings.$font, heading-font);
-    font-size: 3rem;
+  font-family: map-get(settings.$font, heading-font);
+  font-size: 3rem;
 }
- 
+
 p {
-    color: map-get(settings.$color, transparent-white);
-    font-family: map-get(settings.$font, subheading-font);
-    font-size: 1rem;
-    line-height: 2;
+  color: map-get(settings.$color, transparent-white);
+  font-family: map-get(settings.$font, subheading-font);
+  font-size: 1rem;
+  line-height: 2;
 }
-
-
