--- a/styles/trumps.css
+++ b/styles/trumps.css
@@ -1,10 +1,12 @@
 @font-face {
   font-family: "Lexend Deca";
-  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"), url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
+  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"),
+    url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
 }
 @font-face {
   font-family: "Big Shoulders Display";
-  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
+  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"),
+    url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
 }
 .container__box--orange {
   background-color: hsl(31, 77%, 52%);
@@ -30,4 +32,4 @@
 .dark {
   background: rgba(0, 0, 0, 0.75);
   color: #d9d9d9;
-}/*# sourceMappingURL=trumps.css.map */
+} /*# sourceMappingURL=trumps.css.map */
