--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -4,7 +4,7 @@ $color: (
   "very-dark-cyan": hsl(179deg 100% 13%),
   "transparent-white": hsl(0deg 0% 100% / 75%),
   //paragraphs
-  "very-light-gray": hsl(0deg 0% 95%) //background, headings, buttons,,
+  "very-light-gray": hsl(0deg 0% 95%) //background, headings, buttons,,,
 );
 
 $font: (
