--- a/styles/elements.css
+++ b/styles/elements.css
@@ -1,13 +1,11 @@
 @font-face {
   font-family: "Lexend Deca";
-  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"),
-    url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
+  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"), url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Big Shoulders Display";
-  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"),
-    url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
+  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
 }
 
 html {
