--- a/styles/components.css
+++ b/styles/components.css
@@ -1,13 +1,11 @@
 @font-face {
   font-family: "Lexend Deca";
-  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"),
-    url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
+  src: url("../fonts/lexenddeca-variablefont_wght-webfont.woff") format("woff"), url("../fonts/lexenddeca-variablefont_wght-webfont.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Big Shoulders Display";
-  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"),
-    url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
+  src: url("../fonts/bigshouldersdisplay-semibold-webfont.woff") format("woff"), url("../fonts/bigshouldersdisplay-semibold-webfont.woff2") format("woff2");
 }
 
 .container {
@@ -35,9 +33,14 @@
   border: none;
 }
 
-@media (width <= 700px) {
+@media (width <= 767px) {
   .container {
     display: flex;
     flex-direction: column;
+    margin: 70px 15px;
+  }
+
+  .container .container__button {
+    margin-top: 25px;
   }
 }
