--- a/styles/trumps.css
+++ b/styles/trumps.css
@@ -16,6 +16,12 @@
   color: hsl(31deg 77% 52%);
 }
 
+.container__box--orange .container__button:hover {
+  box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
+  color: hsl(0deg 0% 100% / 75%);
+  background-color: hsl(31deg 77% 52%);
+}
+
 .container__box--cyan {
   background-color: hsl(184deg 100% 22%);
 }
@@ -24,12 +30,24 @@
   color: hsl(184deg 100% 22%);
 }
 
+.container__box--cyan .container__button:hover {
+  box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
+  color: hsl(0deg 0% 100% / 75%);
+  background-color: hsl(184deg 100% 22%);
+}
+
 .container__box--dark-cyan {
   background-color: hsl(179deg 100% 13%);
 }
 
 .container__box--dark-cyan .container__button {
   color: hsl(179deg 100% 13%);
+}
+
+.container__box--dark-cyan .container__button:hover {
+  box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
+  color: hsl(0deg 0% 100% / 75%);
+  background-color: hsl(179deg 100% 13%);
 }
 
 .dark {
