--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,7 +1,7 @@
 $color: (
-  "bright-orange": hsl(31deg 77% 52%),
-  "dark-cyan": hsl(184deg 100% 22%),
-  "very-dark-cyan": hsl(179deg 100% 13%),
+  "orange": hsl(31deg 77% 52%),
+  "cyan": hsl(184deg 100% 22%),
+  "dark-cyan": hsl(179deg 100% 13%),
   "transparent-white": hsl(0deg 0% 100% / 75%),
   //paragraphs
   "very-light-gray": hsl(0deg 0% 95%) //background, headings, buttons,,,
