--- a/styles/trumps.css
+++ b/styles/trumps.css
@@ -18,6 +18,7 @@
 
 .container__box--orange .container__button:hover {
   box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
+  box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
   color: hsl(0deg 0% 100% / 75%);
   background-color: hsl(31deg 77% 52%);
 }
@@ -32,6 +33,7 @@
 
 .container__box--cyan .container__button:hover {
   box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
+  box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
   color: hsl(0deg 0% 100% / 75%);
   background-color: hsl(184deg 100% 22%);
 }
@@ -45,6 +47,7 @@
 }
 
 .container__box--dark-cyan .container__button:hover {
+  box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
   box-shadow: inset 0 0 0 2px hsl(0deg 0% 100% / 75%);
   color: hsl(0deg 0% 100% / 75%);
   background-color: hsl(179deg 100% 13%);
