--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,10 @@
 @use "mixins";
-@use "settings";
+@use "variables";
+@use "elements";
+
+@include mixins.box-color("orange", "transparent-white");
+@include mixins.box-color("cyan", "transparent-white");
+@include mixins.box-color("dark-cyan", "transparent-white");
 
 .container {
   @include mixins.desktopSizeContainer;
@@ -18,10 +23,17 @@
   position: relative;
   bottom: 10px;
   margin-top: 60px;
-  font-family: map-get(settings.$font, subheading-font);
+  font-family: map-get(variables.$font, subheading-font);
   padding: 15px 30px;
   border-radius: 30px;
   border: none;
+}
+
+
+
+
+.dark {
+  @include mixins.theme(true);
 }
 
 @media (width <= 767px) {
